add chapter_02 函数式编程之旅

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,11 @@ else()
 endif()
 message("CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
-add_subdirectory(utils)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/homebrew/Cellar/gcc/14.2.0_1/include/c++/14")
 
 set(main_name chapter_01_main)
 add_executable(${main_name} chapter_01/main.cc)
+
+set(main_name chapter_02_main)
+add_executable(${main_name} chapter_02/main.cc)
 
