add chapter_04 以旧函数创建新函数

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,3 +17,6 @@ add_executable(${main_name} chapter_02/main.cc)
 set(main_name chapter_03_main)
 add_executable(${main_name} chapter_03/main.cc)
 target_link_libraries(${main_name} boost_phoenix)
+
+set(main_name chapter_04_main)
+add_executable(${main_name} chapter_04/main.cc)
