--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,16 +7,23 @@ message("CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/opt/homebrew/Cellar/gcc/14.2.0_1/include/c++/14")
 
-set(main_name chapter_01_main)
-add_executable(${main_name} chapter_01/main.cc)
+set(chapter chapter_01)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
 
-set(main_name chapter_02_main)
-add_executable(${main_name} chapter_02/main.cc)
+set(chapter chapter_02)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
 
-
-set(main_name chapter_03_main)
-add_executable(${main_name} chapter_03/main.cc)
+set(chapter chapter_03)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
 target_link_libraries(${main_name} boost_phoenix)
 
-set(main_name chapter_04_main)
-add_executable(${main_name} chapter_04/main.cc)
+set(chapter chapter_04)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
+
+set(chapter chapter_05)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
