add chapter_07 range

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,3 +31,8 @@ add_executable(${main_name} ${chapter}/main.cc)
 set(chapter chapter_06)
 set(main_name ${chapter}_main)
 add_executable(${main_name} ${chapter}/main.cc)
+
+set(chapter chapter_07)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
+target_link_libraries(${main_name} range-v3::range-v3)
