add chapter_08 函数式数据结构

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,3 +36,7 @@ set(chapter chapter_07)
 set(main_name ${chapter}_main)
 add_executable(${main_name} ${chapter}/main.cc)
 target_link_libraries(${main_name} range-v3::range-v3)
+
+set(chapter chapter_08)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
