--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,3 +44,8 @@ add_executable(${main_name} ${chapter}/main.cc)
 set(chapter chapter_09)
 set(main_name ${chapter}_main)
 add_executable(${main_name} ${chapter}/main.cc)
+
+set(chapter chapter_10)
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
+target_link_libraries(${main_name} range-v3::range-v3)
