--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,3 +53,10 @@ target_link_libraries(${main_name} range-v3::range-v3)
 set(chapter chapter_11)
 set(main_name ${chapter}_main)
 add_executable(${main_name} ${chapter}/main.cc)
+
+set(chapter chapter_12)
+include_directories(${chapter})
+set(main_name ${chapter}_main)
+add_executable(${main_name} ${chapter}/main.cc)
+#add_subdirectory(${chapter}/actor)
+target_link_libraries(${main_name} boost_asio boost_system nlohmann_json::nlohmann_json)
